<resources>
    <string name="app_name">Eldar Wallet Challenge</string>
    <string name="app_title">Eldar Wallet</string>

    <string name="loader_tag">Loader Dialog</string>
    <string name="populate_database_error">Hubo un error al actualizar la base de datos</string>
    <string name="login_error">Las credenciales de usuario son erroneas</string>

    <string name="login_user_hint">Usuario</string>
    <string name="login_password_hint">Contraseña</string>
    <string name="login_button_text">Iniciar sesión</string>

    <string name="home_header_welcome">¡Hola %s!</string>
    <string name="balance_label">Saldo</string>
    <string name="home_card_number_hidden">**** %s</string>
    <string name="home_qr_generate_error">Hubo un problema al generar su QR</string>

    <string name="add_card_header">Agregar Tarjeta</string>
    <string name="add_card_number_hint">Numero de Tarjeta</string>
    <string name="add_card_owner_hint">Nombre del titular</string>
    <string name="add_card_cvv_hint">CVV</string>
    <string name="add_card_expiration_month_hint">Mes Vto.</string>
    <string name="add_card_expiration_year_hint">Año Vto.</string>
    <string name="add_card_button_text">Agregar tarjeta</string>
    <string name="add_card_success_toast">Tarjeta guardada con exito</string>
    <string name="add_card_error_toast">Hubo un error al guardar la tarjeta</string>
    <string name="add_card_number_error_toast">El numero de tarjeta no es correcto</string>

    <string name="qr_view_header">Recibir pago por QR</string>
    <string name="qr_view_button">Cancelar</string>

    <string name="pay_card_selection_header">Selecciona una tarjeta</string>
    <string name="pay_card_selection_back">Volver</string>
    <string name="pay_nfc_reader_header">Por favor apoya el telefono en el dispositivo de cobro</string>

</resources>